@@ -18,6 +18,8 @@
 """ Daemon process behaviour.
     """
 
+from __future__ import absolute_import
+
 import os
 import sys
 import resource
