@@ -13,6 +13,8 @@
 """ Lockfile behaviour implemented via Unix PID files.
     """
 
+from __future__ import absolute_import
+
 import os
 import errno
 
